# ghast

./: .gitignore  README.md  release-plz.toml
.github/workflows/: build.yml  haunt.yml  release-plz.yml  release.yml
src-panel/: index.html  package-lock.json  package.json  vite.config.ts
src-panel/src/: About.tsx  App.tsx  BlackMetal.tsx  BlackMetalSettings.tsx  Menu.tsx  RunItem.tsx  Settings.tsx  Tooltip.tsx  styles.css  types.ts
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  github.rs  keychain.rs  lib.rs  main.rs  notify.rs  panel.rs  poller.rs  state.rs  tray.rs
src-ui/: index.html
