[package]
name = "ghast"
version = "0.1.0"
edition = "2021"

[lib]
name = "ghast_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.44"
tokio = { version = "1", features = ["time", "sync", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
open = "5"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
notify-rust = "4"
